# iam-dashboard

./: .env.example  .env.staging  .gitignore  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  .roomodes  .secrets.baseline  CLAUDE.md  Caddyfile  Dockerfile  GEMINI.md  LONG-TERM-MEMORY.md  Makefile  README.md  REFACTORING_SUMMARY.md  alembic.ini  backend-test-strategy.md  clean_documents.py  clear_redis.py  cpf-fix.md  disable_2fa.py  docker-compose.staging.yml  docker-compose.yml  fix_admin_tests.py  fix_e2e_imports.py  frontend-test-strategy.md  package-lock.json  package.json  pyproject.toml  pytest.ini  test_admin_debug.py  test_gemini_embed.py  tsconfig.json  turbo.json  validate-phase1.sh
alembic/: env.py
apps/api/: .env.example  .env.test  Dockerfile  README.md  alembic.ini  debug_test.py  package.json  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 573f587bc07e_initial_schema_with_postgresql_support.py  a19a3b395e9a_create_initial_database_schema.py  bf6164bca6c6_initial_schema_fixed_enums.py
apps/api/scripts/: run_seed.sh  seed_data.py
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py
apps/api/src/api/v1/: auth.py  clients.py  router.py
apps/api/src/core/: config.py  database.py
apps/api/src/examples/: security_usage.py
apps/api/src/middleware/: __init__.py  auth.py  integration_example.py  logging.py  security.py
apps/api/src/models/: __init__.py  audit.py  client.py  permission.py  user.py
apps/api/src/schemas/: __init__.py  auth.py  client.py
apps/api/src/services/: __init__.py  auth_service.py  client_service.py
apps/api/src/utils/: __init__.py  cookie_utils.py
apps/api/tests/: conftest.py  conftest_postgres.py  run_model_tests.py  test_main.py  test_no_deprecated_datetime.py
apps/api/tests/factories/: README.md  __init__.py  audit_factory.py  base_factory.py  client_factory.py  permission_factory.py  user_factory.py
apps/api/tests/integration/: test_auth_api_integration.py  test_client_api_integration.py
apps/api/tests/test_auth/: __init__.py
apps/api/tests/test_models/: conftest.py  test_audit.py  test_basic_validation.py  test_client.py  test_permission.py  test_user.py
apps/api/tests/unit/: README.md  __init__.py  test_audit.py  test_auth_api.py  test_auth_api_comprehensive.py  test_auth_api_edge_cases.py  test_auth_api_success_flows.py  test_auth_service_comprehensive.py  test_basic_validation.py  test_client.py  test_client_schemas.py  test_client_service.py  test_client_service_comprehensive.py  test_cookie_utils_comprehensive.py  test_middleware_auth_comprehensive.py  test_middleware_security_comprehensive.py  test_permission.py  test_user.py
apps/backend/: BACKEND_COVERAGE_REPORT.md  PERMISSION_INTEGRATION_SUMMARY.md  REFACTORING_PRIORITIES.md  alembic.ini  amp  boundary-mocks-report.txt  debug_db_function.py  debug_permission.py  debug_test_env.py  mock-audit-report.txt  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_consolidated_initial_schema.py  07ec9e9b9bff_create_initial_schemas_for_users_.py  5522e7954293_add_totp_backup_codes_to_users_table.py  78127a183377_initial_schema_with_cpf.py  9b632b3132c3_add_user_agent_permissions_system.py  b2dee6e21ed0_fix_user_role_case_in_permission_.py
apps/backend/alembic/versions_backup/: 07ec9e9b9bff_create_initial_schemas_for_users_.py  0ae9658a2a5f_fix_permission_function_enum_names.py  77244922327a_migrate_ssn_to_cpf_fixed.py  b2dee6e21ed0_fix_user_role_case_in_permission_.py
apps/backend/coverage/: clover.xml  coverage-final.json  coverage_html_cb_6fb7b396.js.html  index.html
apps/backend/src/: __init__.py  main.py
apps/backend/src/agents/: .gitkeep
apps/backend/src/api/v1/: __init__.py  auth.py  clients.py  permissions.py  users.py
apps/backend/src/core/: config.py  database.py  exceptions.py  middleware.py  password_security.py  permissions.py  security.py  totp.py
apps/backend/src/models/: .gitkeep  __init__.py  audit.py  base.py  client.py  permissions.py  user.py
apps/backend/src/schemas/: .gitkeep  __init__.py  auth.py  clients.py  common.py  permissions.py  users.py
apps/backend/src/services/: .gitkeep  client_service.py  database_locking.py  permission_service.py  rate_limiting.py  security_monitoring.py  session_security.py  user_service.py
apps/backend/src/tests/: DISABLED_TESTS.md  MOCK_REFACTORING_GUIDE.md  README.md  __init__.py  conftest.py  factories.py  test_audit.py  test_audit_model.py  test_auth_api.py  test_client_api.py  test_client_api_comprehensive.py  test_client_integration.py  test_client_model.py  test_client_schemas.py  test_client_service.py  test_client_service_comprehensive.py  test_client_service_update_delete.py  test_config.py  test_core_permissions.py  test_database.py  test_exceptions.py  test_factories.py  test_main.py  test_middleware.py  test_password_security.py  test_permission_api.py  test_permission_api_integration.py  test_permission_integration.py  test_permission_middleware.py  test_permission_models.py  test_permission_performance.py  test_permission_service.py  test_permission_service_integration.py  test_security.py  test_seed_data.py  test_totp.py  test_user_model.py  test_user_service.py  test_validation.py  test_validation_utilities.py
apps/backend/src/tests/e2e/: conftest.py  test_auth_api.py  test_client_api.py  test_client_api_comprehensive.py  test_permission_api.py  test_permission_api_integration.py
apps/backend/src/tests/integration/: conftest.py  test_audit.py  test_client_integration.py  test_client_service_comprehensive.py  test_client_service_update_delete.py  test_database.py  test_middleware.py  test_permission_integration.py  test_permission_middleware.py  test_permission_service_integration.py  test_seed_data.py
apps/backend/src/tests/performance/: conftest.py  performance_bottleneck_report.md  test_api_performance_benchmarks.py  test_critical_performance_sla.py  test_load_testing_concurrent_users.py  (+1 more)
apps/backend/src/utils/: .gitkeep  __init__.py  audit.py  seed_data.py  validation.py
(+657 files in other folders)
